[gd_scene load_steps=6 format=3 uid="uid://cv0ukcamovfyt"]

[ext_resource type="Script" path="res://Scripts/GUI/result_screen.gd" id="1_yxu0l"]
[ext_resource type="FontFile" uid="uid://5x8o7p2t84dl" path="res://Assets/GUI/Fonts/NIS-JTC-Win-M9-Condensed.ttf" id="2_w7gmf"]
[ext_resource type="FontFile" uid="uid://4vkwi6n6xoco" path="res://Assets/GUI/Fonts/NIS-JTC-Win-M9.ttf" id="4_5s8p2"]

[sub_resource type="LabelSettings" id="LabelSettings_6jp2b"]
font = ExtResource("2_w7gmf")
font_size = 72

[sub_resource type="LabelSettings" id="LabelSettings_mhc5c"]
font = ExtResource("4_5s8p2")
font_size = 600
outline_size = 30
outline_color = Color(0, 0, 0, 1)

[node name="ResultScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yxu0l")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.7
anchor_right = 1.0
anchor_bottom = 0.9
offset_bottom = -0.264038
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0110876, 0.0110876, 0.0110876, 1)

[node name="WinText" type="Label" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Player1 WINS"
label_settings = SubResource("LabelSettings_6jp2b")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "0 - 0"
label_settings = SubResource("LabelSettings_mhc5c")
horizontal_alignment = 1
vertical_alignment = 1
